[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/InteractiveConsole.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/MainDialog/DialogPageSelector.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/SaveLoadControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/MainDialog/DialogSavePanel.gd" type="Script" id=4]
[ext_resource path="res://ui/FontResizer.tscn" type="PackedScene" id=5]

[node name="DialogSavePanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="GridContainer" parent="All"]
margin_right = 565.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogPageSelector" parent="All/Left" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 565.0
margin_bottom = 23.0
enable_Saves = false

[node name="Console" type="VSplitContainer" parent="All/Left"]
margin_top = 27.0
margin_right = 565.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Info" parent="All/Left/Console" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 565.0
margin_bottom = 430.0
initial_bbcode = ""
follow_urls = false
allow_input = false

[node name="Help" parent="All/Left/Console" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 442.0
margin_right = 565.0
margin_bottom = 873.0

[node name="SaveLoadControl" parent="All" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 577.0
margin_right = 1600.0
margin_bottom = 900.0
size_flags_stretch_ratio = 1.8

[node name="FontResizer" parent="." instance=ExtResource( 5 )]

[connection signal="page_selected" from="All/Left/DialogPageSelector" to="." method="_on_DialogPageSelector_page_selected"]
[connection signal="url_clicked" from="All/Left/Console/Info" to="All/Left/Console/Help" method="process_command"]
[connection signal="no_save_selected" from="All/SaveLoadControl" to="." method="_on_save_deselected"]
[connection signal="save_created" from="All/SaveLoadControl" to="." method="_on_save_deselected"]
[connection signal="save_deleted" from="All/SaveLoadControl" to="." method="_on_save_deselected"]
[connection signal="save_replaced" from="All/SaveLoadControl" to="." method="_on_save_deselected"]
[connection signal="save_selected" from="All/SaveLoadControl" to="." method="_on_save_selected"]
[connection signal="saves_rescanned" from="All/SaveLoadControl" to="." method="_on_save_deselected"]
